--- a/TODO
+++ b/TODO
@@ -17,45 +17,23 @@ if ever -- only if somebody cares enough and submits a clean
 patch, perhaps ;-).
 
 
-Documentation
--------------
-
-* No pending issues at the moment.  "Revamp Tutorial" initiative
-  by Bruce Fields ongoing and things are looking better.
-
-
 UI
 --
 
 * Make "git branch -d foo" while on foo branch suggest "maybe
   you want to go back to 'master'?"
 
-* Error message from "git checkout -b bar v2.6.10" should assume
-  v2.6.10 is an attempt to switch to a new branch based on
-  mistyped tag, not an attempt to revert path v2.6.10 from the
-  HEAD commit with extra "make and switch to this branch"
-  argument.
-
-* "git commit [-i|-o] paths..." with misspelled paths would be
-  silently ignored.  Add a flag to ls-files to catch unmatched
-  pathspec to prevent this.
-
 
 Design issues
 -------------
 
-* Rehash "git commit" with various parameters to be more
-  intuitive without breaking traditinal users too much.  We need
-  to phase this in, especially if we are going to change "git
-  commit" to imply the current "git commit -a" behaviour.
-
-* "intent to add" index entries.
+* "intent to add" index entries?
 
 * Plug-in file-level merges.  On the other hand, we may not even
   need this; just tell people to run "xxdiff -U" on the working
   tree files.
 
-* Doing a merge in a separate directory.
+* Doing a merge in a separate directory?
 
 * Make 'format-patch' take revision limiters similar to
   rev-list.  For example:
@@ -101,51 +79,20 @@ Technical (heavier)
 
   This needs a matching smart on the dumb protocol downloader.
 
-* Maybe an Emacs VC backend.
-
-* Look at libified GNU diff CVS seems to use, or libxdiff.
-  [Daniel has his own diff tool almost ready to start
-  integrating and testing]
-
 
 Technical (milder)
 ------------------
 
-* "git status -v" to give commit preview.
+* Shallow clones.
+
+* Encourage competition between annotate vs blame.  Maybe come
+  up with some nontrivial test cases.
 
 * Subprojects.  I think the "bind commit" approach has been
   outlined at sufficiently detailed level.  Maybe find time to
   actually start prototyping it?
 
   <7vacdzkww3.fsf@assigned-by-dhcp.cox.net>
-
-* Shallow clones.
-
-* Mark entries as "assume unchanged" in the index.
-
-  <Pine.LNX.4.64.0601311807470.7301@g5.osdl.org>
-
-  A config item '[core] trust_stat = false' would cause to:
-
-  - "update-index" with or without --add would mark the path
-    valid after registering.  Should we make the working tree
-    file read-only at this point?
-
-  - checkout-index -u would mark the path and makes the working
-    tree file read-only.
-
-  - read-tree without -u would mark the path invalid.
-
-  - update-index --refresh should *not* mark up-to-date paths valid.
-
-  Impacts to various commands:
-
-  - update-index --refresh would ignore them.
-
-  - diff-files would say unchanged.
-
-  - diff-index without --cached acts the same way as diff-index
-    --cached.
 
 * Decide what to do about rebase applied to merged head.  One
   extreme is to allow rebase if "rev-list ours..theirs" gives
@@ -164,8 +111,6 @@ Technical (milder)
 
   <20060114021800.4688.qmail@web31803.mail.mud.yahoo.com>
 
-* Perhaps a smarter HTTP anonymous download via CGI.
-
 * diff stopping at the first output; qgit wants to know if this
   tree has any A or D from the other tree and nothing else.
   Would help internal tree-diff in rev-list as well.
@@ -179,21 +124,10 @@ Technical (milder)
 * Perhaps detect cloning request in upload-pack and cache the
   result for next cloning request until any of our refs change.
 
-* Perhaps accept patch to optionally allow '--fuzz' in
-  'git-apply'.  am/applymbox is _not_ the place to do it.
-
-* Allow 'git apply' to accept GNU diff 2.7 output that forgets
-  to say '\No newline' if both input ends with incomplete
-  lines.
-
 * Perhaps deal with "Files differ" (binary diff) in non C
   locales.
 
 * Maybe grok PGP signed text/plain in applymbox as well.
-
-* Output full path in the "git-rev-list --objects" output, not
-  just the basename, and see the improved clustering results in
-  better packing [Tried, but did not work out well].
 
 
 Technical (trivial)
